--- a/styles/styles.css
+++ b/styles/styles.css
@@ -966,7 +966,7 @@ h2 + p {
   border-color: #68A2CA;
 }
 
-.social-link:hover svg path, .social-link:focus svg path {
+.social-link:hover path, .social-link:focus path {
   fill: #68A2CA;
 }
 
