--- a/styles/styles.css
+++ b/styles/styles.css
@@ -449,10 +449,25 @@ h2 + p {
   text-decoration: none;
 }
 
+.breadcrumbs-item {
+  display: flex;
+  gap: 10px;
+}
+
+.breadcrumbs-item:not(:last-child)::after {
+  content: '';
+  display: block;
+  background-image: url('../images/icons/arrow-right.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 8px;
+}
+
 .breadcrumbs-list {
   display: flex;
   list-style: none;
   padding: 0;
+  gap: 10px;
 }
 
 .infrastructure-list {
@@ -469,6 +484,34 @@ h2 + p {
 .infrastructure-item:last-child,
 .home-type-item:last-child {
   margin: 0;
+}
+
+.home-type-name,
+.infrastructure-name {
+  display: flex;
+  gap: 16px;
+}
+
+
+.home-type-input + .home-type-name::before,
+.infrastructure-input + .infrastructure-name::before {
+  display: block;
+  content: '';
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background-color:#ffffff;
+}
+
+.infrastructure-input:checked + .infrastructure-name::before {
+  background-image: url('../images/icons/tick.svg');
+}
+
+.home-type-input:checked + .home-type-name::before {
+  background-image: radial-gradient(#3F5E72 0%,#3F5E72 35%, #fff 35%);
+}
+.home-type-item .home-type-name::before {
+  border-radius: 50%;
 }
 
 .home-type-list {
@@ -521,7 +564,17 @@ h2 + p {
   width: 100%;
   padding: 12px 20px;
   border: none;
+  appearance: textfield;
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
 }
+
+.price-input::-webkit-outer-spin-button,
+.price-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 
 #from {
   border-radius: 4px 0 0 4px;
@@ -698,6 +751,10 @@ h2 + p {
   width: 292px;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
+  appearance: none;
+  background-image: url('../images/icons/arrow-down.svg');
+  background-position: 90% center;
+  background-repeat: no-repeat;
 }
 
 .rating-wrapper {
@@ -922,11 +979,13 @@ h2 + p {
 .product-favorite-link.in-favorite.disabled,
 .product-favorite-link.in-favorite:disabled,
 .search-results-settings:disabled,
+.modal-search-button:disabled,
 .search-results-settings.disabled {
   background-color: #e5e5e5;
   color: #ffffff;
 }
 
+.modal-search-button:hover, .modal-search-button:focus-visible,
 .submit-button:hover, .submit-button:focus,
 .submit-button-catalog:hover, .submit-button-catalog:focus,
 .product-favorite-link:hover, .product-favorite-link:focus,
@@ -934,6 +993,7 @@ h2 + p {
   background-color: #68a2ca;
 }
 
+.modal-search-button:active,
 .submit-button:active,
 .submit-button-catalog:active,
 .product-favorite-link:active,
@@ -988,4 +1048,238 @@ h2 + p {
 
 .footer-logo-htmlacademy:active path {
   fill: #7561574D;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.80);
+  z-index: 2;
+}
+
+.modal-content {
+  width: 100%;
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 40px;
+  background-color: #ffffff;
+}
+
+.modal-search {
+  width: 717px;
+  padding: 64px 70px;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+}
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  top: 64px;
+  right: 52px;
+  width: 52px;
+  height: 52px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 50%;
+  background-image: url('../images/icons/close.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.modal-close-button:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-close-button:focus-visible {
+  outline: 2px solid #83B3D3;
+}
+
+.modal-close-button:active {
+  opacity: .6;
+}
+
+.modal-title {
+  text-align: start;
+  margin-bottom: 64px;
+}
+
+.modal-search-form {
+  display: flex;
+  flex-direction: column;
+  gap: 49px;
+}
+
+.field-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.date-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-width: 440px;
+  position: relative;
+}
+
+.count-people {
+  display: flex;
+}
+
+.date-label, .count-people-text {
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: capitalize;
+  font-size: 20px;
+}
+
+
+.date-input{
+  height: 48px;
+  padding: 12px 20px;
+  border-radius: 4px;
+  background: #F2F2F2;
+  border: none;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.input-message {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21px;
+  padding: 0 20px;
+  position: absolute;
+  bottom: -25px;
+}
+
+.error-text {
+  color: #FF5757;
+}
+
+.count-wrapper {
+  display: flex;
+  border-radius: 4px;
+  background: #F2F2F2;
+}
+
+.count-people {
+  gap: 40px;
+}
+
+.input-count-people {
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  width: 31px;
+  padding: 14px 0;
+  border: none;
+  background-color: inherit;
+  appearance: textfield;
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+}
+
+.input-count-people::-webkit-outer-spin-button,
+.input-count-people::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.count-button {
+  width: 40px;
+  padding: 14px 10px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.count-button:hover path {
+  fill: #000;
+  fill-opacity: 1;
+}
+
+.count-button:active path {
+  fill: #756157;
+  fill-opacity: .3;
+}
+
+.count-button:focus-visible svg {
+  outline: 3px solid #82B3D3;
+  outline-offset: 3px;
+}
+
+.count-people-text {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.count-tooltip-button {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  justify-content: center;
+  align-items: center;
+  background-color: #83B3D3;
+  border-radius: 50%;
+  position: relative;
+}
+
+.count-tooltip {
+  display: none;
+}
+
+.count-tooltip-button:hover > .count-tooltip {
+  display: block;
+  position: absolute;
+  width: 256px;
+  padding: 15px 18px 18px 22px;
+  border-radius: 10px;
+  background:#333;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.30);
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  top: 35px;
+}
+
+.count-tooltip-button:hover > .count-tooltip::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 19px;
+  height: 20px;
+  top: -9px;
+  left: 50%;
+  transform: translateX(-50%) rotate(-135deg);
+  background: linear-gradient(
+    to bottom right,
+    transparent 0%,
+    transparent 50%,
+    #333 50%,
+    #333 100%
+  );
+}
+
+.modal-search-button {
+  border-radius: 10px;
+  background: #83B3D3;
+  border: none;
+  color: #FFFFFF;
+  padding: 18px 77px;
+  font-size: 20px;
+  font-weight: 400px;
+  text-transform: uppercase;
 }
