Делает правки к защите

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,7 @@ body {
   background-color: #f2f2f2;
   margin: 0;
   height: 100%;
+  min-width: 1280px;
 }
 
 html {
@@ -72,6 +73,7 @@ html {
   margin: 0 0 0 170px;
   list-style: none;
   padding: 0;
+  max-width: 550px;
 }
 
 .header-menu .header-item {
@@ -158,6 +160,7 @@ html {
   padding: 8px 34px;
   border-radius: 4px;
   display: block;
+  max-width: 160px;
 }
 
 
@@ -166,7 +169,7 @@ html {
   margin: 69px auto 90px;
 }
 
-h2 {
+.heading-level-two {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -179,7 +182,7 @@ h2 {
   color: #ffffff;
 }
 
-h2 + p {
+.heading-level-two + .about-text {
   margin: 0;
   font-size: 22px;
   line-height: 26px;
@@ -198,7 +201,7 @@ h2 + p {
   color: #000000;
   background-color: rgba(131, 179, 211, 0.12);
   width: 400px;
-  height: 385px;
+  min-height: 385px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -226,7 +229,8 @@ h2 + p {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  gap: 30px;
+  gap: 60px;
+  padding: 20px 0;
 }
 
 .advantages-title {
@@ -235,6 +239,7 @@ h2 + p {
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
+  margin: 0;
 }
 
 .advantages-title::after {
@@ -293,10 +298,12 @@ h2 + p {
 
 .benefits-list li {
   display: flex;
-  justify-content: center;
+  justify-content: stretch;
   flex-direction: column;
   align-items: center;
-  padding: 64px;
+  padding: 80px 85px;
+  width: 400px;
+  height: 385px;
 }
 
 .benefits-item-blue {
@@ -309,12 +316,15 @@ h2 + p {
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
+  margin: 30px 0;
 }
 
 .about-benefits {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
+  margin: 0;
+  max-width: 210px;
 }
 
 .booking {
@@ -349,6 +359,7 @@ h2 + p {
 
 .mailing-list-text {
   color:#ffffff;
+  max-width: 480px;
 }
 
 .button-hotel-search {
@@ -378,18 +389,24 @@ h2 + p {
   border-radius: 4px 0 0 4px;
 }
 
+.input-email:focus-visible {
+  outline: 3px solid #68a2ca;
+}
+
 .submit-button {
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
   text-align: center;
+  font-family: inherit;
   text-transform: uppercase;
   color: #ffffff;
   background-color: #82b3d3;
   border: none;
-  padding: 8px 50px;
+  padding: 8px;
   border-radius: 0 4px 4px 0;
   cursor: pointer;
+  width: 232px;
 }
 
 .submit-button-catalog {
@@ -403,26 +420,26 @@ h2 + p {
 .social-list-wrapper {
   display: flex;
   justify-content:space-between;
-  padding: 40px 70px 30px;
+  padding: 45px 70px 30px 70px;
   align-items: center;
 }
 
 .social-list {
   display: flex;
+  flex-wrap: wrap;
+  max-width: 150px;
   align-items: center;
   margin: 0;
   padding: 0;
 }
 
 .social-list .social-list-item {
-  display: inline-block;
   padding: 10px;
+  height: 40px;
+  min-width: 50px;
+  display: flex;
 }
 
-.social-list .social-link {
-  display: flex;
-  align-content: center;
-}
 
 .footer-tel {
   font-size: 40px;
@@ -431,7 +448,6 @@ h2 + p {
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
-
 }
 
 .catalog-header {
@@ -467,6 +483,7 @@ h2 + p {
   display: flex;
   list-style: none;
   padding: 0;
+  margin: 0;
   gap: 10px;
 }
 
@@ -510,6 +527,22 @@ h2 + p {
 .home-type-input:checked + .home-type-name::before {
   background-image: radial-gradient(#3F5E72 0%,#3F5E72 35%, #fff 35%);
 }
+
+.home-type-input:active + .home-type-name::before,
+.infrastructure-input:active + .infrastructure-name::before {
+  outline: 2px solid #83B3D3;
+}
+
+.home-type-input:disabled + .home-type-name::before,
+.infrastructure-input:disabled + .infrastructure-name::before {
+  opacity: 0.3;
+}
+
+.home-type-input:focus-visible + .home-type-name::before,
+.infrastructure-input:focus-visible + .infrastructure-name::before {
+  outline: 4px solid #83B3D3;
+}
+
 .home-type-item .home-type-name::before {
   border-radius: 50%;
 }
@@ -522,7 +555,7 @@ h2 + p {
 
 .search-form {
   display: flex;
-  margin-top: 40px;
+  margin-top: 45px;
 }
 
 .search-form-section {
@@ -534,7 +567,8 @@ h2 + p {
 }
 
 .search-form-section-buttons {
-  padding-top: 32px;
+  padding-top: 60px;
+  font-family: inherit;
 }
 
 .search-form-wrapper {
@@ -544,8 +578,8 @@ h2 + p {
 }
 
 .search-form-wrapper:first-child {
-  margin-right: 140px;
-  max-width: 340px;
+  margin-right: 150px;
+  max-width: 360px;
 }
 
 .price-wrapper {
@@ -564,9 +598,15 @@ h2 + p {
   width: 100%;
   padding: 12px 20px;
   border: none;
+  font-size: 18px;
+  font-weight: 700;
   appearance: textfield;
   -webkit-appearance: textfield;
   -moz-appearance: textfield;
+}
+
+.price-input:focus-visible {
+  outline: 3px solid #83B3D3;
 }
 
 .price-input::-webkit-outer-spin-button,
@@ -575,13 +615,12 @@ h2 + p {
   margin: 0;
 }
 
-
-#from {
+.price-input.from {
   border-radius: 4px 0 0 4px;
   margin-right: 2px;
 }
 
-#to {
+.price-input.to {
   border-radius: 0 4px 4px 0;
 }
 
@@ -631,7 +670,7 @@ h2 + p {
 
 .search-results-header {
   display: flex;
-  padding: 50px 0 40px;
+  padding: 50px 0 35px;
   justify-content: space-between;
 }
 
@@ -646,25 +685,26 @@ h2 + p {
 
 .search-results-change-view {
   display: flex;
+  flex-wrap: wrap;
+  max-width: 300px;
   margin: 0 0 0 70px;
   list-style: none;
   padding: 0;
+  gap: 8px;
 }
 
 .change-view-item {
   padding: 0;
   margin: 0;
-  margin-right: 8px;
 }
 
 .change-view-item .change-view-button {
   display: block;
   margin: 0;
-  padding: 17px 16px;
+  padding: 10px 14px;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
 }
-
 
 .change-view-item .change-view-button:hover,
 .change-view-item .change-view-button:active,
@@ -681,6 +721,7 @@ h2 + p {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+  font-family: "PT Sans";
   text-transform: capitalize;
   color: #ffffff;
 }
@@ -709,6 +750,7 @@ h2 + p {
   background-color: #82B3D3;
   padding: 8px;
   width: 191px;
+  display: block;
   border: none;
   border-radius: 4px;
 }
@@ -737,9 +779,10 @@ h2 + p {
 .search-results-title {
   font-weight: 700;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 42px;
   text-transform: uppercase;
   color: #000000;
+  margin: 0;
 }
 
 .search-results-sorting {
@@ -752,9 +795,19 @@ h2 + p {
   border: 2px solid #E5E5E5;
   border-radius: 4px;
   appearance: none;
+  background-color: #ffffff;
   background-image: url('../images/icons/arrow-down.svg');
-  background-position: 90% center;
+  background-position: 94% center;
   background-repeat: no-repeat;
+}
+
+.search-results-sorting:disabled {
+  border-color: rgba(0, 0, 0, 0.30);
+  color: rgba(0, 0, 0, 0.30);
+}
+
+.search-results-sorting:focus-visible {
+  outline: 3px solid #68a2ca;
 }
 
 .rating-wrapper {
@@ -781,6 +834,13 @@ h2 + p {
   gap: 20px;
   list-style: none;
   padding: 0;
+  margin: 0;
+}
+
+.product-name {
+  margin: 0;
+  font-size: 24px;
+  line-height: 46px;
 }
 
 .product-list-item {
@@ -803,21 +863,25 @@ h2 + p {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
+  margin: 10px 0 0 0;
 }
 
 .product-buttons {
   display: flex;
   justify-content: space-between;
+  margin-top: 15px;
 }
 
 .product-about-link {
   padding: 8px 26px;
   border-radius: 4px;
+  max-width: 140px;
 }
 
 .product-favorite-link {
-  padding: 8px 20px;
+  padding: 8px;
   border-radius: 4px;
+  width: 140px;
 }
 
 .product-buttons a {
@@ -859,9 +923,11 @@ h2 + p {
 
 .pagination-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   list-style: none;
   padding: 0;
+  gap: 8px 0;
 }
 
 .pagination-list .pagination-item {
@@ -911,6 +977,7 @@ h2 + p {
 
 .section-hero {
   position: relative;
+  background-color: rgb(61, 61, 61);
   background-image: url("../images/index-background.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -933,22 +1000,31 @@ h2 + p {
 }
 
 .mailing-list {
+  background-color: rgb(61, 61, 61);
   background-image: url("../images/subscribe.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  min-height: 415px;
 }
 
-.no-picture {
+.mailing-list.no-picture {
   background-image: none;
+  background-color: #ffffff;
+}
+
+.mailing-list.no-picture .about-page,
+.mailing-list.no-picture .about-text {
+  color: #000000;
 }
 
 .main-section {
+  background-color: rgb(61, 61, 61);
   background-image: url("../images/subscribe-catalog.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 35px 70px 70px;
+  padding: 35px 70px 60px 70px;
 }
 
 .button-want:hover, .button-want:focus,
@@ -1054,7 +1130,7 @@ h2 + p {
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
+  display: none;
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.80);
@@ -1142,7 +1218,6 @@ h2 + p {
   font-size: 20px;
 }
 
-
 .date-input{
   height: 48px;
   padding: 12px 20px;
@@ -1151,6 +1226,11 @@ h2 + p {
   border: none;
   font-weight: 700;
   font-size: 18px;
+  position: relative;
+  padding-right: 40px;
+  background-image: url('../images/icons/calendar.svg');
+  background-position: 95% center;
+  background-repeat: no-repeat;
 }
 
 .input-message {
@@ -1187,6 +1267,16 @@ h2 + p {
   appearance: textfield;
   -webkit-appearance: textfield;
   -moz-appearance: textfield;
+}
+
+.date-input:focus-visible,
+.input-count-people:focus-visible {
+  outline: 3px solid #68a2ca;
+}
+
+.date-input:disabled,
+.input-count-people:disabled {
+  opacity: 0.3;
 }
 
 .input-count-people::-webkit-outer-spin-button,
@@ -1234,6 +1324,12 @@ h2 + p {
   background-color: #83B3D3;
   border-radius: 50%;
   position: relative;
+  text-transform: none;
+  color: var(--basic-white, #FFF);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .count-tooltip {
