--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1135,6 +1135,8 @@ html {
   height: 100%;
   background-color: rgba(242, 242, 242, 0.80);
   z-index: 2;
+  justify-content: center;
+  align-content: center;
 }
 
 .modal-content {
@@ -1142,8 +1144,6 @@ html {
 }
 
 .modal {
-  position: relative;
-  margin: auto;
   padding: 40px;
   background-color: #ffffff;
 }
