--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,7 +36,7 @@ body {
   background-color: #f2f2f2;
   margin: 0;
   height: 100%;
-  min-width: 1280px;
+  min-width: 1200px;
 }
 
 html {
@@ -93,6 +93,11 @@ html {
   position: relative;
   top: 21px;
   display: block;
+}
+
+.header-link:hover,
+.header-link:active {
+  opacity: .8;
 }
 
 .welcome-svg {
@@ -303,11 +308,29 @@ html {
   align-items: center;
   padding: 80px 85px;
   width: 400px;
-  height: 385px;
+  min-height: 385px;
 }
 
 .benefits-item-blue {
   background-color: rgba(131, 179, 211, 0.12);
+}
+
+.benefits-item {
+  background-position: center 80px;
+  background-repeat: no-repeat;
+}
+
+.benefits-item.home {
+  background-image: url('../images/icons/icon-home.svg');
+
+}
+.benefits-item.food {
+  background-image: url('../images/icons/food.svg');
+
+}
+.benefits-item.gift {
+  background-image: url('../images/icons/icon-gift.svg');
+
 }
 
 .benefits-title {
@@ -316,7 +339,7 @@ html {
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
-  margin: 30px 0;
+  margin: 102px 0 30px;
 }
 
 .about-benefits {
@@ -324,7 +347,7 @@ html {
   line-height: 21px;
   text-align: center;
   margin: 0;
-  max-width: 210px;
+  max-width: 230px;
 }
 
 .booking {
@@ -409,12 +432,15 @@ html {
   width: 232px;
 }
 
+.reset-button,
 .submit-button-catalog {
   cursor: pointer;
-}
-
-.reset-button {
-  cursor: pointer;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  text-transform: uppercase;
 }
 
 .social-list-wrapper {
@@ -440,20 +466,26 @@ html {
   display: flex;
 }
 
+.social-list .social-list-item:last-child {
+  padding-left: 8px;
+}
+
 
 .footer-tel {
   font-size: 40px;
+  font-weight: 400;
   line-height: 40px;
   text-align: center;
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
+  margin-left: -4px;
 }
 
 .catalog-header {
   font-weight: 700;
   font-size: 60px;
-  line-height: 78px;
+  line-height: 79px;
   color: #ffffff;
   margin: 0;
 }
@@ -483,7 +515,7 @@ html {
   display: flex;
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 4px 0 0 0;
   gap: 10px;
 }
 
@@ -518,6 +550,7 @@ html {
   height: 20px;
   border-radius: 4px;
   background-color:#ffffff;
+  flex-shrink: 0;
 }
 
 .infrastructure-input:checked + .infrastructure-name::before {
@@ -555,7 +588,7 @@ html {
 
 .search-form {
   display: flex;
-  margin-top: 45px;
+  margin-top: 42px;
 }
 
 .search-form-section {
@@ -567,7 +600,7 @@ html {
 }
 
 .search-form-section-buttons {
-  padding-top: 60px;
+  padding-top: 57px;
   font-family: inherit;
 }
 
@@ -590,7 +623,7 @@ html {
 .price-input-wrapper {
   position: relative;
   display: flex;
-  width: 143px;
+  width: 145px;
   height: 48px;
 }
 
@@ -633,7 +666,7 @@ html {
 .range-scale {
   width: 287px;
   height: 4px;
-  margin-top: 48px;
+  margin-top: 44px;
   background-color: rgba(255, 255, 255, 0.3);
   position: relative;
 }
@@ -670,7 +703,7 @@ html {
 
 .search-results-header {
   display: flex;
-  padding: 50px 0 35px;
+  padding: 50px 0 40px;
   justify-content: space-between;
 }
 
@@ -702,9 +735,29 @@ html {
   display: block;
   margin: 0;
   padding: 10px 14px;
+  width: 48px;
+  height: 48px;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
 }
+
+.change-view-button {
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.change-view-button.tiles {
+  background-image: url('../images/icons/icon-tiles.svg');
+}
+
+.change-view-button.window {
+  background-image: url('../images/icons/icon-window.svg');
+}
+
+.change-view-button.list {
+  background-image: url('../images/icons/icon-list.svg');
+}
+
 
 .change-view-item .change-view-button:hover,
 .change-view-item .change-view-button:active,
@@ -779,7 +832,7 @@ html {
 .search-results-title {
   font-weight: 700;
   font-size: 30px;
-  line-height: 42px;
+  line-height: 50px;
   text-transform: uppercase;
   color: #000000;
   margin: 0;
@@ -822,10 +875,13 @@ html {
   align-items: center;
   list-style: none;
   padding: 0;
+  gap: 6px;
 }
 
 .rating-list .rating-star {
-  margin: 0 6px 0 0;
+  width: 18px;
+  height: 17px;
+  background: url('../images/icons/icon-star.svg') no-repeat center;
 }
 
 .product-list {
@@ -1013,6 +1069,10 @@ html {
   background-color: #ffffff;
 }
 
+.mailing-list.no-picture .input-email {
+  background-color: #F2F2F2;
+}
+
 .mailing-list.no-picture .about-page,
 .mailing-list.no-picture .about-text {
   color: #000000;
@@ -1024,7 +1084,7 @@ html {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 35px 70px 60px 70px;
+  padding: 35px 70px 55px 70px;
 }
 
 .button-want:hover, .button-want:focus,
@@ -1109,6 +1169,7 @@ html {
 .social-link:active path {
   fill: #68A2CA4D;
 }
+
 .footer-tel:hover, .footer-tel:focus {
   color: #756157;
 }
