--- a/styles/styles.css
+++ b/styles/styles.css
@@ -421,7 +421,6 @@ html {
   font-size: 20px;
   line-height: 36px;
   text-align: center;
-  font-family: inherit;
   text-transform: uppercase;
   color: #ffffff;
   background-color: #82b3d3;
@@ -430,6 +429,7 @@ html {
   border-radius: 0 4px 4px 0;
   cursor: pointer;
   width: 232px;
+  font-family: "PT Sans", sans-serif;
 }
 
 .reset-button,
@@ -441,6 +441,7 @@ html {
   font-weight: 700;
   line-height: 20px;
   text-transform: uppercase;
+  font-family: "PT Sans", sans-serif;
 }
 
 .social-list-wrapper {
@@ -774,7 +775,7 @@ html {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   text-transform: capitalize;
   color: #ffffff;
 }
